add javascript on my page

--- a/home.html
+++ b/home.html
@@ -11,8 +11,8 @@
   <body>
     <h1>WELCOME TO DAY DISCOVERY PAGE!!</h1>
     <p id="descri">Many of us know their birthdate but they can't tell on which day they were born on,
-    it is so easy with programming.We'll be referring ourselves to Ghana's names that match 
-    with the day you were born on and gender.Just enter your birthdate and gender..ENJOY!!</p>
+    it is so easy with programming.We'll be referring ourselves to Ghana's names that match with the day
+    you were born on and gender. Just enter your birthdate and gender. HAVE FUN!</p>
     <br>
     <div class="well" style="height:250px;width:600px;margin-left:50px;"> 
       
@@ -49,6 +49,6 @@
         </script>
     </div>
    
-    <footer style="margin-top:20%;text-align: center;color:whitesmoke;">Copyright@Emma2019</footer>
+    <footer style="margin-top:20%;text-align: center;color:whitesmoke;font-size:20px;">Copyright@Emma2019</footer>
   </body>
 </html>
