change color of paragraph

--- a/home.html
+++ b/home.html
@@ -19,7 +19,7 @@
     <br>
     <h2 style="text-align: center;color:white;">WHAT IS AKANA NAME?</h2>
     <br>
-    <p style="color:thistle;font-size: 23px;">The Akan people of Ghana and the Ivory Coast frequently name their children
+    <p style="color:beige;font-size: 23px;">The Akan people of Ghana and the Ivory Coast frequently name their children
       after the day of the week
       they were born and the order in which they were born. These "day names" have further meanings
       concerning the soul and character of the person. This naming tradition is shared throughout West Africa
@@ -57,7 +57,7 @@
     </div>
     <br>
 
-    <div class="well" style="height:400px;width:600px;margin-left:250px;">
+    <div class="well" style="height:400px;width:600px;margin-left:300px;margin-top:100px;">
 
 
       <p style="font-weight:bold;">To which gender identity do you identify:</p>
@@ -96,7 +96,7 @@
 
     </div>
 
-    <footer style="margin-top:15%;text-align: center;color:whitesmoke;font-size:20px;">Copyright@Emma2019</footer>
+    <footer style="margin-top:10%;text-align: center;color:whitesmoke;font-size:20px;">Copyright@Emma2019</footer>
     <script>
       function chel() {
         var leti = ["Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"];
